@@ -1,0 +1,2 @@
+*~
+autom4te.cache
